# WorkOS

./: .env.example  pyproject.toml
ai-work-os/: .gitignore
apps/api/: main.py
apps/api/routes/: health.py
infra/: docker-compose.yml
